--- a/index.html
+++ b/index.html
@@ -4,24 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Wedding Invitation</title>
-    <style>
-        body {
-            text-align: center;
-        }
-        .image-gallery {
-            max-width: 100%;
-            margin: 0 auto; /* Center the container */
-        }
-        img {
-            display: block; /* Make each image appear on a new line */
-            max-width: 80%; /* Decrease the size of the images */
-            height: auto;
-            margin: 20px auto; /* Add margin between images and center them horizontally */
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
-    <h1>Your Wedding Invitation</h1>
+    <h1>My Wedding Invitation</h1>
     
     <div class="image-gallery">
         <img src="images/1.jpg" alt="Image 1">
