--- a/index.html
+++ b/index.html
@@ -1,22 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Wedding Invitation</title>
-    <link rel="stylesheet" href="styles.css">
-
-</head>
+    <head>
+        <meta charset="utf-8">
+        <title>TinDog</title>
+        <!--Bootstrap and javascript -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+          crossorigin="anonymous"></script>
+        <!--css file-->
+        <link rel="stylesheet" href="styles.css">
+        <!--Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;900&family=Ubuntu:wght@700&display=swap"
+          rel="stylesheet">
+        <!--Fontawesome -->
+        <script src="https://kit.fontawesome.com/622cbe08bf.js" crossorigin="anonymous"></script>
+      </head>
 <body>
-    <h1>My Wedding Invitation</h1>
+        <section id="title">
+            <img class="garland" src="5041134.png" alt="Image 0">    
+          <!-- Nav Bar -->
+          <nav class="navbar navbar-expand-lg navbar-dark">
+            <a class="navbar-brand" href="">Vanakkam family and friends</a>
+            </button>
+          </nav>
     
     <div class="image-gallery">
-        <img src="images/1.jpg" alt="Image 1">
-        <img src="images/2.jpg" alt="Image 2">
-        <img src="images/3.jpg" alt="Image 3">
-        <img src="images/4.jpg" alt="Image 4">
-        <img src="images/5.jpg" alt="Image 5">
-        <img src="images/6.jpg" alt="Image 6">
+        <img class="inv" src="images/1.jpg" alt="Image 1">
+        <img class="inv" src="images/2.jpg" alt="Image 2">
+        <img class="inv" src="images/3.jpg" alt="Image 3">
+        <img class="inv" src="images/4.jpg" alt="Image 4">
+        <img class="inv" src="images/5.jpg" alt="Image 5">
+        <img class="inv" src="images/6.jpg" alt="Image 6">
     </div>
 </body>
 </html>
