--- a/index.html
+++ b/index.html
@@ -21,20 +21,36 @@
       </head>
 <body>
         <section id="title">
-            <img class="garland" src="5041134.png" alt="Image 0">    
-          <!-- Nav Bar -->
-          <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="">Vanakkam family and friends</a>
-            </button>
-          </nav>
+            <img class="garland" src="images/garland.png" alt="Image 0">
+            <img class="vanakam" src="images/vanakam.png" alt="Image 0">
+        </section>
+
+        <section id = "image1">
+            <img class="inv" src="images/1.jpg" alt="Image 1">
+
+        </section>
+        <section id = "image2">
+            <img class="inv" src="images/2.jpg" alt="Image 2">
+
+        </section>
+        <section id = "image3">
+            <img class="inv" src="images/3.jpg" alt="Image 3">
+
+        </section>
+        <section id = "image4">
+            <img class="inv" src="images/4.jpg" alt="Image 4">
+
+        </section>
+        <section id = "image5">
+            <img class="inv" src="images/5.jpg" alt="Image 5">
+
+        </section>
+        <section id = "image6">
+            <img class="inv" src="images/6.jpg" alt="Image 6">
+
+        </section>
     
     <div class="image-gallery">
-        <img class="inv" src="images/1.jpg" alt="Image 1">
-        <img class="inv" src="images/2.jpg" alt="Image 2">
-        <img class="inv" src="images/3.jpg" alt="Image 3">
-        <img class="inv" src="images/4.jpg" alt="Image 4">
-        <img class="inv" src="images/5.jpg" alt="Image 5">
-        <img class="inv" src="images/6.jpg" alt="Image 6">
     </div>
 </body>
 </html>
