--- a/index.html
+++ b/index.html
@@ -288,6 +288,10 @@
     <div id="section_location" class="row justify-content-center mt-5 mb-5 ml-3 mr-3">
         <h1 class="couples-title text-center h1-responsive">Traditional Invitation</h1>
       </div>
+      <a href="invite/Suresh_Mahalakshmi.pdf" target="_blank" download>
+        <button class="btn btn-danger" style="border-radius: 20px;">Download Invitation</button>
+      </a>
+      
     
       <div class="container mt-5">
         <div id="imageCarousel" class="carousel slide" data-ride="carousel">
@@ -542,7 +546,7 @@
             });
         }
     </script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&callback=initMap">
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEJSLlf1X0goYyOdVfvVX51b1a6hF2mMw&callback=initMap">
     </script>
 
     <!-- Optional JavaScript -->
