--- a/index.html
+++ b/index.html
@@ -341,213 +341,36 @@
     </div>
 
     <!-- <div class="google_map p-2" id="google_map">
-    </div> -->
+  </div> -->
 
-    <style>
-        .maps-embed-container {
-            position: relative;
-            width: 100%;
-            height: 500px;
-        }
+  <style>
+    .maps-embed-container {
+      position: relative;
+      width: 100%;
+      height: 500px;
+    }
 
-        .maps-embed-view {
-            width: 100%;
-            height: 500px;
-        }
-    </style>
+    .maps-embed-view {
+      width: 100%;
+      height: 500px;
+    }
+  </style>
 
-    <div class="maps-embed-container">
-        <iframe class="maps-embed-view" width="450" height="250" frameborder="0" style="border:0"
-            referrerpolicy="no-referrer-when-downgrade"
-            src="https://www.google.com/maps/embed/v1/place?key=AIzaSyABxK2v1LCL8hJ1TlT8IX58UIhV-zQb5m0&q=12.6081392,80.0546877&center=12.6081392,80.0546877&zoom=18">
-        </iframe>
-    </div>
+  <div class="maps-embed-container">
+    <iframe
+      class="maps-embed-view"
+      width="450"
+      height="250"
+      frameborder="0" style="border:0"
+      referrerpolicy="no-referrer-when-downgrade"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.306816516945!2d80.01882557595226!3d12.88798211670419!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a52f756edef1a2f%3A0x66c8d6cf56db4627!2sCNC%20MAHAL!5e0!3m2!1sen!2sin!4v1694507340695!5m2!1sen!2sin">
+    </iframe>    
+  </div>
 
     <footer class="page-footer snowfall-red font-small">
-        <div class="footer-copyright text-white text-center py-3">© 2023 Copyright:
+        <div class="footer-copyright text-white text-center py-3">© 2023 Copyright:Designed and Developed by Suresh
         </div>
     </footer>
-
-    <!-- Google maps script -->
-    <script>
-        function initMap() {
-            var uluru = {
-                lat: Number('12.6081392'),
-                lng: Number('80.0546877')
-            };
-            var mapScript = {
-                zoom: 18,
-                center: uluru,
-                mapTypeControl: false,
-                zoomControl: false,
-                streetViewControl: false,
-                styles: [
-                    {
-                        "featureType": "landscape",
-                        "stylers": [
-                            {
-                                "saturation": -100
-                            },
-                            {
-                                "lightness": 60
-                            }
-                        ]
-                    },
-                    {
-                        "featureType": "road.local",
-                        "stylers": [
-                            {
-                                "saturation": -100
-                            },
-                            {
-                                "lightness": 40
-                            },
-                            {
-                                "visibility": "on"
-                            }
-                        ]
-                    },
-                    {
-                        "featureType": "transit",
-                        "stylers": [
-                            {
-                                "saturation": -100
-                            },
-                            {
-                                "visibility": "simplified"
-                            }
-                        ]
-                    },
-                    {
-                        "featureType": "administrative.province",
-                        "stylers": [
-                            {
-                                "visibility": "off"
-                            }
-                        ]
-                    },
-                    {
-                        "featureType": "water",
-                        "stylers": [
-                            {
-                                "visibility": "on"
-                            },
-                            {
-                                "lightness": 30
-                            }
-                        ]
-                    },
-                    {
-                        "featureType": "road.highway",
-                        "elementType": "geometry.fill",
-                        "stylers": [
-                            {
-                                "color": "#ef8c25"
-                            },
-                            {
-                                "lightness": 40
-                            }
-                        ]
-                    },
-                    {
-                        "featureType": "road.highway",
-                        "elementType": "geometry.stroke",
-                        "stylers": [
-                            {
-                                "visibility": "off"
-                            }
-                        ]
-                    },
-                    {
-                        "featureType": "poi.park",
-                        "elementType": "geometry.fill",
-                        "stylers": [
-                            {
-                                "color": "#b6c54c"
-                            },
-                            {
-                                "lightness": 40
-                            }
-                        ]
-                    },
-                    {
-                        "featureType": "poi.school",
-                        "elementType": "geometry.fill",
-                        "stylers": [
-                            {
-                                "color": "#b6c54c"
-                            },
-                            {
-                                "lightness": 40
-                            }
-                        ]
-                    },
-                    {
-                        "featureType": "transit",
-                        "stylers": [
-                            {
-                                "saturation": -100
-                            },
-                            {
-                                "visibility": "simplified"
-                            }
-                        ]
-                    },
-                    {
-                        "featureType": "poi.park",
-                        "stylers": [
-                            {
-                                "saturation": -100
-                            },
-                            {
-                                "lightness": 40
-                            }
-                        ]
-                    },
-                    {
-                        "featureType": "poi.sports_complex",
-                        "stylers": [
-                            {
-                                "saturation": -100
-                            },
-                            {
-                                "lightness": 40
-                            }
-                        ]
-                    },
-                    {
-                        "featureType": "poi.business",
-                        "stylers": [
-                            {
-                                "saturation": -100
-                            },
-                            {
-                                "lightness": 40
-                            }
-                        ]
-                    },
-                    {
-                        "featureType": "poi.medical",
-                        "stylers": [
-                            {
-                                "saturation": -100
-                            },
-                            {
-                                "lightness": 40
-                            }
-                        ]
-                    }
-                ]
-            };
-            var map = new google.maps.Map(document.getElementById('google_map'), mapScript);
-            var marker = new google.maps.Marker({
-                position: uluru,
-                map: map
-            });
-        }
-    </script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEJSLlf1X0goYyOdVfvVX51b1a6hF2mMw&callback=initMap">
-    </script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
