--- a/index.html
+++ b/index.html
@@ -303,25 +303,33 @@
                 <li data-target="#imageCarousel" data-slide-to="4"></li>
                 <li data-target="#imageCarousel" data-slide-to="5"></li>
             </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="invite/1.jpg" class="d-block w-100" alt="Image 1">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="invite/1.jpg" class="d-block w-100 img-fluid d-md-none" alt="Image 1">
+                        <img src="invite/1.jpg" class="d-none d-md-block w-50 mx-auto img-fluid" alt="Image 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="invite/2.jpg" class="d-block w-100 img-fluid d-md-none" alt="Image 2">
+                        <img src="invite/2.jpg" class="d-none d-md-block w-50 mx-auto img-fluid" alt="Image 2">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="invite/3.jpg" class="d-block w-100 img-fluid d-md-none" alt="Image 2">
+                        <img src="invite/3.jpg" class="d-none d-md-block w-50 mx-auto img-fluid" alt="Image 2">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="invite/4.jpg" class="d-block w-100 img-fluid d-md-none" alt="Image 2">
+                        <img src="invite/4.jpg" class="d-none d-md-block w-50 mx-auto img-fluid" alt="Image 2">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="invite/5.jpg" class="d-block w-100 img-fluid d-md-none" alt="Image 2">
+                        <img src="invite/5.jpg" class="d-none d-md-block w-50 mx-auto img-fluid" alt="Image 2">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="invite/6.jpg" class="d-block w-100 img-fluid d-md-none" alt="Image 2">
+                        <img src="invite/6.jpg" class="d-none d-md-block w-50 mx-auto img-fluid" alt="Image 2">
+                    </div>
                 </div>
-                <div class="carousel-item">
-                    <img src="invite/2.jpg" class="d-block w-100" alt="Image 2">
-                </div>
-                <div class="carousel-item">
-                    <img src="invite/3.jpg" class="d-block w-100" alt="Image 3">
-                </div>
-                <div class="carousel-item">
-                    <img src="invite/4.jpg" class="d-block w-100" alt="Image 4">
-                </div>
-                <div class="carousel-item">
-                    <img src="invite/5.jpg" class="d-block w-100" alt="Image 5">
-                </div>
-                <div class="carousel-item">
-                    <img src="invite/6.jpg" class="d-block w-100" alt="Image 6">
-                </div>
+
             </div>
             <a class="carousel-control-prev" href="#imageCarousel" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
