--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
     <link href="https://fonts.googleapis.com/css?family=Acme|Emilys+Candy" rel="stylesheet">
     <link href="https://weddie.netlify.app/css/styles-snowfall.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="apple-touch-icon" href="https://weddie.netlify.app/img/apple-touch-icon.png">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-    <canvas class="black" style="position: fixed; width: 100%; height: 100%; top: 0; left: 0; right: 0; bottom: 0; z-index: -2;"
-        id="canvas"></canvas>
+    <!-- Body and Navbar -->
+    <canvas class="black" style="position: fixed; width: 100%; height: 100%; top: 0; left: 0; right: 0; bottom: 0; z-index: -2;"id="canvas"></canvas>
 
     <nav class="navbar snowfall-red fixed-top navbar-expand-xl navbar-dark">
         <a class="navbar-brand font-weight-bold" href="/">Wedding Invitation</a>
@@ -43,12 +46,15 @@
                     <a class="nav-link font-weight-bold" href="#section_gallery"><i class="fa fa-photo"></i> Gallery</a>
                 </li>
                 <li class="nav-item m-2" data-toggle="collapse" data-target=".navbar-collapse.show">
+                    <a class="nav-link font-weight-bold" href="#section_invitation"><i class="fa fa-map-marker"></i> Invitation</a>
+                </li>
+                <li class="nav-item m-2" data-toggle="collapse" data-target=".navbar-collapse.show">
                     <a class="nav-link font-weight-bold" href="#section_location"><i class="fa fa-map-marker"></i> Location</a>
                 </li>
             </ul>
         </div>
     </nav>
-
+    <!-- Suresh and Mahalakshmi -->
     <div style="margin-top: 8em;"></div>
 
     <div class="mt-4 container justify-content-center">
@@ -64,9 +70,9 @@
             Together with our families, We invite you to share this day of happiness!
         </h3>
     </div>
-
+    <!-- Suresh and Mahalakshmi Ends -->
     <hr class="style_section d-flex fluid m-5">
-
+    <!-- Wedding Couple -->
     <div class="row justify-content-center mt-5 ml-3 mr-3">
         <h1 class="header-couple-names text-center h1-responsive">Wedding Couple</h1>
     </div>
@@ -100,9 +106,9 @@
             </div>
         </div>
     </div>
-
+    <!-- Wedding Couple Ends-->
     <hr class="style_section d-flex fluid m-5">
-
+    <!-- Our Story -->
     <div id="section_story" class="row justify-content-center mt-5 ml-3 mr-3">
         <h1 class="couples-title text-center h1-responsive">Our Story...</h1>
     </div>
@@ -163,9 +169,9 @@
             </div>
         </div>
     </div>
-
+    <!-- Our Story Ends -->
     <hr class="style_section d-flex fluid m-5">
-
+    <!-- Main Events -->
     <div id="section_main_event" class="row justify-content-center mt-5 ml-3 mr-3">
         <h1 class="couples-title text-center h1-responsive">Main Events</h1>
     </div>
@@ -223,9 +229,9 @@
             </div>
         </div>
     </div>
-
+    <!-- Main Events Ends -->
     <hr class="style_section d-flex fluid m-5">
-
+    <!-- Photo Gallery -->
     <div id="section_gallery" class="row justify-content-center mt-5 ml-3 mr-3">
         <h1 class="couples-title text-center h1-responsive">Photo Gallery</h1>
     </div>
@@ -270,9 +276,9 @@
             </figcaption>
         </figure>
     </div>
-
+    <!-- Photo Gallery -->
     <hr class="style_section d-flex fluid m-5">
-
+    <!-- Traditional Invitation -->
     <div id="section_invitation" class="row justify-content-center mt-5 mb-5 ml-3 mr-3">
         <h1 class="couples-title text-center h1-responsive">Traditional Invitation</h1>
     </div>
@@ -318,9 +324,9 @@
             </div>
         </div>
     </div>
-
+    <!-- Traditional Invitation Ends-->
     <hr class="style_section d-flex fluid m-5">
-
+    <!-- Wedding Location -->
     <div id="section_location" class="row justify-content-center mt-5 mb-5 ml-3 mr-3">
         <h1 class="couples-title text-center h1-responsive">Wedding Location</h1>
     </div>
@@ -335,7 +341,7 @@
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.306816516945!2d80.01882557595226!3d12.88798211670419!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a52f756edef1a2f%3A0x66c8d6cf56db4627!2sCNC%20MAHAL!5e0!3m2!1sen!2sin!4v1694507340695!5m2!1sen!2sin">
         </iframe>
     </div>
-
+    <!-- Wedding Location Ends-->
     <!-- Copyright -->
 
     <footer class="page-footer snowfall-red font-small">
@@ -352,8 +358,19 @@
 
     <!-- Snowfall Effect JavaScript -->
     <script src="https://weddie.netlify.app/js/jquery.min.js"></script>
-    <script src="https://weddie.netlify.app/js/jquery.ui.min.js"></script>
     <script src="https://weddie.netlify.app/js/snowfall.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/popper.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.8/js/mdb.min.js"></script>
+  
+    
+    <!-- Common Footer End -->
+  
+  
+    <script type="text/javascript" src="https://weddie.netlify.app/js/snowfall.js"></script>
+    <script src="https://weddie.netlify.app/js/simplyCountdown.js"></script>
+
     <script>
         $(document).ready(function () {
             $(document).snowfall({
@@ -406,6 +423,7 @@
     }
     });
 </script>
+
 
 </body>
 </html>
